--- a/action.yml
+++ b/action.yml
@@ -55,8 +55,9 @@ runs:
         LOGO_DATA_SOURCE: ${{ inputs.logo-data-source }}
         FILE_PATH: ${{ inputs.file-path }}
         MARKER_LINE: ${{ inputs.marker-line }}
+        GITHUB_TOKEN: ${{ github.token }}
       run: |
-        uv run ${{ github.action_path }}/scripts/update_readme.py
+        uv run -s ${{ github.action_path }}/scripts/update_readme.py
 
     - name: Check for changes
       id: check-changes
