fix: Actually hide debug logs from insiders

--- a/action.yml
+++ b/action.yml
@@ -55,8 +55,7 @@ runs:
         LOGO_DATA_SOURCE: ${{ inputs.logo-data-source }}
         FILE_PATH: ${{ inputs.file-path }}
         MARKER_LINE: ${{ inputs.marker-line }}
-      run: |
-        uv run -s ${{ github.action_path }}/scripts/update_readme.py
+      run: uv run -s ${{ github.action_path }}/scripts/update_readme.py
 
     - name: Check for changes
       id: check-changes
