--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -18,3 +18,5 @@ jobs:
 
     - name: Update README and create PR
       uses: pawamoy/readme-sponsors@main
+      with:
+        sponsors-url: 'https://raw.githubusercontent.com/pawamoy/readme-sponsors/main/SPONSORS.html'
