--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -20,3 +20,4 @@ jobs:
       uses: pawamoy/readme-sponsors@main
       with:
         markup-url: https://pawamoy.github.io/sponsors.txt
+        marker-line: "<!-- sponsors -->"
