--- a/.github/workflows/sponsors.yml
+++ b/.github/workflows/sponsors.yml
@@ -20,4 +20,6 @@ jobs:
       uses: pawamoy/readme-sponsors@main
       with:
         markup-url: https://pawamoy.github.io/sponsors.txt
-        marker-line: "<!-- sponsors -->"
+        commit-message: "chore: Update sponsors"
+        pr-title: "chore: Update sponsors"
+        pr-body: "Sponsors section updated automatically."
